更换我的界面图标

--- a/JiaoBaoYun-hb/html/index/mine.html
+++ b/JiaoBaoYun-hb/html/index/mine.html
@@ -28,47 +28,47 @@
 				<ul class="mui-table-view mui-table-view-chevron">
 					<li class="mui-table-view-cell" position='0'>
 						<a class="mui-navigate-right" open-type="common">
-							<span class="mui-icon iconfont icon-group"></span> 群管理
+							<img src="../../image/mine/group-manage.png" class="mine-icon"></img> 群管理
 						</a>
 					</li>
 					<li class="mui-table-view-cell" position='1'>
 						<a class="mui-navigate-right" open-type="common">
-							<span class="mui-icon iconfont icon-qunziliao"></span> 人员资料
+							<img src="../../image/mine/data.png" class="mine-icon"></span> 人员资料
 						</a>
 					</li>
 
 					<li class="mui-table-view-cell" position='2'>
 						<a class="mui-navigate-right" open-type="common">
-							<span class="mui-icon iconfont icon-jiaqun"></span> 申请加入群
+							<img src='../../image/mine/apply-group.png' class="mine-icon"></img> 申请加入群
 						</a>
 					</li>
 					<li class="mui-table-view-divider"></li>
 					<li class="mui-table-view-cell" position='3'>
-						<a class="mui-navigate-right">
-							<span class="mui-icon iconfont icon-xiaoxi"></span> 新消息
+						<a class="mui-navigate-right" open-type="common">
+							<img src="../../image/mine/new-message.png" class="mine-icon"></span> 新消息
 							<span id="news-amount" class="mui-badge mui-badge-red">数字</span>
 						</a>
 					</li>
 
 					<li class="mui-table-view-cell" position='4'>
 						<a class="mui-navigate-right">
-							<span class="mui-icon iconfont icon-zone"></span> 我的空间
+							<img src="../../image/mine/my-space.png" class="mine-icon"></img> 我的空间
 						</a>
 					</li>
 					<li class="mui-table-view-cell" position='5'>
 						<a class="mui-navigate-right">
-							<span class="mui-icon iconfont icon-jifen"></span> 积分
+							<img src="../../image/mine/my-points.png" class="mine-icon"></img> 积分
 						</a>
 					</li>
 					<li class="mui-table-view-divider"></li>
 					<li class="mui-table-view-cell" position='6'>
 						<a class="mui-navigate-right">
-							<span class="mui-icon iconfont icon-shezhi about-icon"></span> 设置
+							<img src="../../image/mine/setting.png" class="mine-icon"></img> 设置
 						</a>
 					</li>
 					<li class="mui-table-view-cell" position='7'>
 						<a class="mui-navigate-right">
-							<span class="mui-icon iconfont icon-about about-icon"></span> 关于
+							<img src="../../image/mine/about.png" class="mine-icon"></img> 关于
 						</a>
 					</li>
 				</ul>
