--- a/JiaoBaoYun-hb/html/quan/leave-sub.html
+++ b/JiaoBaoYun-hb/html/quan/leave-sub.html
@@ -439,10 +439,10 @@
 							'<img class=" dynamic-personal-image" src="' + commentArr[j].uimg + '">' +
 							'</div>' +
 							'<div class="mui-media-body dynamic-padding-left-10px">' +
-							'<h6>' + commentArr[j].unick + '</h6>' +
+							'<h6>' +events.shortForString(commentArr[j].unick, 12)  + '</h6>' +
 							'</div></div>' +
 							'<div style= "margin-top:-10px"  class = "chat_content_left">' + '<span style = "color:rgb(43,176,238);font-size:14px;" class="mui-ellipsis">' +
-							'@' + commentArr[j].ReplyIdName + '</span> ' +
+							'@' +events.shortForString(commentArr[j].ReplyIdName, 12)  + '</span> ' +
 							commentArr[j].MsgContent +
 							'<p style="float:right">' + commentArr[j].MsgDate + '</p></div>'
 					} else {
@@ -451,11 +451,11 @@
 							'<img class=" dynamic-personal-image" src="' + commentArr[j].uimg + '">' +
 							'</div>' +
 							'<div class="mui-media-body" style = "text-align: right;padding-right:10px">' +
-							'<h6>' + commentArr[j].unick + '</h6>' +
+							'<h6>' +events.shortForString(commentArr[j].unick, 12)  + '</h6>' +
 							'</div></div>' +
 							'<div style= "margin-top:-5px; "  class = "chat_content_right">' + '<div class="chat-body ">' +
 							'<div >' + '<span style = "font-size:14px;" class=" mui-pull-right">' + '<span style = "color:rgb(43,176,238);">' +
-							'@' + commentArr[j].ReplyIdName + '</span>' + '<span>' + " " +
+							'@' +events.shortForString(commentArr[j].ReplyIdName, 12)  + '</span>' + '<span>' + " " +
 							commentArr[j].MsgContent + '</span> ' + '</span> ' + '<p class="mui-pull-left">' + commentArr[j].MsgDate + '</p></div></div></div>';
 					}
 
