去掉设置中的隐私，判断app版本号

--- a/JiaoBaoYun-hb/html/mine/setting.html
+++ b/JiaoBaoYun-hb/html/mine/setting.html
@@ -17,11 +17,11 @@
 		</header>
 		<div class="mui-content">
 			<ul class="mui-table-view">
-				<li class="mui-table-view-cell">
+				<!--<li class="mui-table-view-cell">
 					<a class="mui-navigate-right" id="yinsi"  style="font-size: 15px;">
 						隐私
 					</a>
-				</li>
+				</li>-->
 				<li class="mui-table-view-cell">
 					<a id="change-passwords" class="mui-navigate-right" style="font-size: 15px;">
 						修改密码
