--- a/JiaoBaoYun-hb/html/homework/homework-comment.html
+++ b/JiaoBaoYun-hb/html/homework/homework-comment.html
@@ -15,34 +15,39 @@
 
 	<body>
 		<header class="mui-bar mui-bar-nav">
-		    <a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
-		    <h1 class="mui-title">作业评论</h1>
+			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
+			<h1 class="mui-title">作业评论</h1>
 		</header>
-		<div class="mui-content mui-scroll">
-			<!--作业详情区-->
-		    <div class="homework-container">
-		    	<div class='student-info'>
-		    		<img id="stu-head" class='stuInfo-img'/>
-		    		<div class='stuInfo-words'>
-		    			<h5 id='stu-name' class="stu-name"></h5>
-		    			<p id='submit-time'></p>
-		    		</div>
-		    	</div>
-		    	<div id="homework-info" class="homework-info"></div>
-		    </div>
-		    <div class="result-container">
-		    	<h6 class="comment-item">作业结果</h6>
-		    	<p id="result-text" class="result-text">
-		    	</p>
-		    </div>
-		    <!--评论区-->
-		    <div class="comment-container">
-	    		<h6 class="comment-item">作业评语</h6>
-	    		<textarea id="comment-area" class='comment-area' rows="5" placeholder="请输入评语"></textarea>
-	    		<button id="btn-comment" type="submit" class="mui-btn mui-btn-green btn-submit">提交评论</button>
-		    </div>
-		    
+
+		<div class="mui-content mui-scroll-wrapper">
+			<div class="mui-scroll">
+				<!--这里放置真实显示的DOM内容-->
+				<!--作业详情区-->
+				<div class="homework-container">
+					<div class='student-info'>
+						<img id="stu-head" class='stuInfo-img' />
+						<div class='stuInfo-words'>
+							<h5 id='stu-name' class="stu-name"></h5>
+							<p id='submit-time'></p>
+						</div>
+					</div>
+					<div id="homework-info" class="homework-info"></div>
+				</div>
+				<div class="result-container">
+					<h6 class="comment-item">作业结果</h6>
+					<p id="result-text" class="result-text">
+					</p>
+				</div>
+				<!--评论区-->
+				<div class="comment-container">
+					<h6 class="comment-item">作业评语</h6>
+					<textarea id="comment-area" class='comment-area' rows="5" placeholder="请输入评语"></textarea>
+					<button id="btn-comment" type="submit" class="mui-btn mui-btn-green btn-submit">提交评论</button>
+				</div>
+
+			</div>
 		</div>
+
 		<script src="../../js/mui.min.js"></script>
 		<script src="../../js/mui.zoom.js "></script>
 		<script src="../../js/mui.previewimage.js "></script>
