昵称修改后 点赞显示原来的昵称

--- a/JiaoBaoYun-hb/html/quan/zonep_sub.html
+++ b/JiaoBaoYun-hb/html/quan/zonep_sub.html
@@ -467,6 +467,7 @@
 			//点赞和取消点赞
 			mui('.mui-table-view').on('tap', '.dynamic-icon-praise', function() {
 				click.push('点赞');
+				personalUTID = window.myStorage.getItem(window.storageKeyName.PERSONALINFO).utid; //用户id
 				var index = this.id.replace('praise', '');
 				var color = this.style.color;
 				if(color == 'rgb(143, 143, 148)') {
