--- a/JiaoBaoYun-hb/html/mine/qun_manage_member_main.html
+++ b/JiaoBaoYun-hb/html/mine/qun_manage_member_main.html
@@ -26,6 +26,7 @@
 		<div class="mui-content"></div>
 	</body>
 	<script src="../../js/mui.min.js"></script>
+	<script type="text/javascript" src="../../js/utils/events.js" ></script>
 	<script type="text/javascript">
 		//启用双击监听
 		mui.init({
@@ -43,10 +44,7 @@
 		});
 
 		mui.plusReady(function() {
-			var wd = plus.nativeUI.showWaiting('加载中...', {
-				back: 'none'
-			});
-
+			var wd = events.showWaiting();
 			//---获取数据并传递数据---start---
 			var main = plus.webview.currentWebview(); //获取当前窗体对象
 			var data = main.data; //接收A页面传入参数值
