--- a/JiaoBaoYun-hb/html/mine/qun_data_details.html
+++ b/JiaoBaoYun-hb/html/mine/qun_data_details.html
@@ -259,8 +259,6 @@
 						showTea();
 						break;
 					case 'parents': //家长
-						//mstype = 0;
-						//createPar();
 						mstype = 3;
 						showStu();
 						break;
@@ -274,7 +272,7 @@
 								mstype = 2;
 								showTea();
 								break;
-							case 3: //家长
+							case 0: //家长
 								//mstype = 0;
 								//createPar();
 								mstype = 3;
@@ -294,7 +292,7 @@
 										mstype = 2;
 										showTea();
 										break;
-									case 3: //家长
+									case 0: //家长
 										//mstype = 0;
 										//createPar();
 										mstype = 3;
@@ -311,39 +309,19 @@
 						break;
 				}
 				//---从父页面获取数据---end---
+
 				mui('.mui-scroll-wrapper').scroll({
 					scrollY: true, //是否竖向滚动
 					bounce: true, //是否启用回弹
 				});
-				//				//---性别选择监听---start---
-				//				var genderPicker = new mui.PopPicker();
-				//				genderPicker.setData([{
-				//					value: '男',
-				//					text: '男'
-				//				}, {
-				//					value: '女',
-				//					text: '女'
-				//				}]);
-				//
-				//				//性别监听
-				//				mui('.mui-content').on('tap', '.gender', function() {
-				//					if(role == 1) {
-				//						console.log('gender:' + this.getAttribute('id'));
-				//						document.activeElement.blur(); //强制隐藏软键盘
-				//						var id = this.getAttribute('id')
-				//						genderPicker.show(function(items) {
-				//							document.getElementById(id).innerText = items[0].value;
-				//							//返回 false 可以阻止选择框的关闭
-				//							//return false;
-				//						});
-				//					}
-				//				});
-				//				//---性别选择监听---end---
 
 				//保存按钮
 				document.getElementById('finish').addEventListener('tap', function() {
-					console.log('保存：' + mstype + '|change:' + change);
+					//console.log('保存：' + mstype + '|change:' + change);
 					if(change) {
+						document.getElementById("finish").style.color = 'gray';
+						change = false;
+
 						if(mstype == 2) {
 							//老师
 							changeTea(); //修改老师资料
@@ -387,7 +365,7 @@
 								parChange = true;
 							}
 						});
-
+						console.log('parChange ' + parChange);
 						if(stu_name.value == data.stuname && !parChange) {
 							document.getElementById("finish").style.color = 'gray';
 							change = false;
@@ -396,7 +374,7 @@
 							change = true;
 						}
 					}
-				})
+				});
 
 				//展示老师资料
 				function showTea() {
@@ -446,37 +424,14 @@
 				 * @param {Object} type 资料类型2老师,3学生
 				 */
 				function getData(type) {
+					var wd = events.showWaiting();
 					console.log('type:' + type + '|stuid:' + data.stuid);
 					//22.通过用户资料ID获取用户各项资料
 					//所需参数
 					var comData = {
-						//						vtp:'Id',
 						vvl: data.stuid //查询的用户资料ID
 					};
-					//返回值model：model_userDataInfo
-					//参数名	名称
-					//gid	群ID
-					//gname	群名称
-					//gimg	群头像
-					//utid	用户账号表ID
-					//ugname	用户在群昵称
-					//umstype	用户在群类型
-					//stat	用户在群状态
-					//urel	用户与资料关系
-					//stuname	资料名称
-					//stuimg	资料头像
-					//stumstype	资料在群类型
-					//job	职位
-					//title	职称
-					//expsch	教龄
-					//sub	科目
-					//stuid	资料ID
-					//gutid	账号在群ID
-					//ustuid	关联ID
-					// 等待的对话框
-					var wd = plus.nativeUI.showWaiting(storageKeyName.WAITING);
 					postDataPro_PostUuinf(comData, wd, function(data) {
-						wd.close();
 						console.log('22通过用户资料ID获取用户各项资料postDataPro_PostUuinf:RspCode:' + data.RspCode + ',RspData:' + JSON.stringify(data.RspData) + ',RspTxt:' + data.RspTxt);
 						if(data.RspCode == 0) {
 							if(type == 2) { //老师
@@ -539,6 +494,7 @@
 								mui.toast(data.RspTxt);
 							}
 						}
+						wd.close();
 					});
 				}
 
@@ -597,6 +553,7 @@
 				 * }
 				 */
 				function getUserData(utidArray) {
+					var wd = events.showWaiting();
 					var comData = null;
 					//					var comData = {
 					//						vvl: utid, //用户id，查询的值,p传个人ID,g传ID串
@@ -620,9 +577,6 @@
 							vtp: 'g' //查询类型,p(个人)g(id串)
 						};
 					}
-					//返回值model：model_userInfo
-					// 等待的对话框
-					var wd = plus.nativeUI.showWaiting(storageKeyName.WAITING);
 					postDataPro_PostUinf(comData, wd, function(data) {
 						console.log('21.通过用户ID获取用户资料postDataPro_PostUinf:RspCode:' + data.RspCode + ',RspData:' + JSON.stringify(data.RspData) + ',RspTxt:' + data.RspTxt);
 						if(data.RspCode == 0) {
@@ -678,6 +632,7 @@
 				 * @param {Object} utidArray
 				 */
 				function getBeiZhu(utidArray) {
+					var wd = events.showWaiting();
 					var strUtid = '';
 					if(utidArray.length == 1) {
 						strUtid = utidArray[0].utid
@@ -694,9 +649,6 @@
 					var comData = {
 						vvl: strUtid //被备注用户ID,utid或utid串
 					};
-					//返回值
-					// 等待的对话框
-					var wd = plus.nativeUI.showWaiting(storageKeyName.WAITING);
 					postDataPro_PostUmk(comData, wd, function(data) {
 						console.log('35_postDataPro_PostUmk_个人获取对某人或一群人的备注.90909090success:RspCode:' + data.RspCode + ',RspData:' + JSON.stringify(data.RspData) + ',RspTxt:' + data.RspTxt);
 						if(data.RspCode == 0) {
@@ -718,7 +670,7 @@
 									}
 								});
 							});
-						} else {}
+						}
 						wd.close();
 					});
 				}
@@ -728,6 +680,10 @@
 				 * @param {Object} stuName
 				 */
 				function changeStuName(stuName) {
+					if(data.stuimg == null) {
+						data.stuimg = 'null';
+					}
+					var wd = events.showWaiting();
 					//23.通过用户资料ID或关联ID更改各类型资料
 					//所需参数
 					var comData = {
@@ -742,25 +698,29 @@
 						ustuid: '', //关联ID,更新与家长关系必填,其他留空
 						urel: '', //关系,更新与家长关系必填,其他留空
 					};
-
-					// 等待的对话框
-					var wd = plus.nativeUI.showWaiting(storageKeyName.WAITING);
+					var stuid = data.stuid;
 					postDataPro_PostReStu(comData, wd, function(data) {
-						wd.close();
 						console.log('90909090success:RspCode:' + data.RspCode + ',RspData:' + JSON.stringify(data.RspData) + ',RspTxt:' + data.RspTxt);
 						if(data.RspCode == 0) {
 							mui.toast('修改学生姓名 ' + stuName + ' 成功');
 							console.log('修改学生姓名 ' + stuName + ' 成功');
+							events.fireToPageNone('qun_manage_data_sub.html', 'changeName', {
+								vtp: 'stu', //更新资料类型,stu:学生,tec:老师,gen:家长关系
+								stuid: stuid, //资料ID,更新学生老师必填,关系留0
+								stuname: stuName, //资料名称
+							});
+							postNum--;
+							if(postNum == 0) {
+								mui.back();
+							}
+							data.stuname = stuName;
 						} else {
 							mui.toast('修改学生姓名 ' + stuName + ' 失败: ' + data.RspTxt);
+							document.getElementById("finish").style.color = 'white';
+							change = true;
 						}
-						postNum--;
-						if(postNum == 0) {
-							events.fireToPageNone('/html/mine/qun_data.html', 'refresh');
-							mui.back();
-						}
+						wd.close();
 					});
-
 				}
 
 				/**
@@ -769,6 +729,7 @@
 				 * @param {Object} urel 关系
 				 */
 				function changeParUrel(ustuid, urel) {
+					var wd = events.showWaiting();
 					//23.通过用户资料ID或关联ID更改各类型资料
 					//所需参数
 					var comData = {
@@ -783,23 +744,28 @@
 						ustuid: ustuid, //关联ID,更新与家长关系必填,其他留空
 						urel: urel, //关系,更新与家长关系必填,其他留空
 					};
-
-					// 等待的对话框
-					var wd = plus.nativeUI.showWaiting(storageKeyName.WAITING);
 					postDataPro_PostReStu(comData, wd, function(data) {
-						wd.close();
 						console.log('90909090success:RspCode:' + data.RspCode + ',RspData:' + JSON.stringify(data.RspData) + ',RspTxt:' + data.RspTxt);
 						if(data.RspCode == 0) {
 							mui.toast('更新与家长关系 ' + urel + ' 成功');
 							console.log('更新与家长关系 ' + urel + ' 成功');
+							postNum--;
+							if(postNum == 0) {
+								mui.back();
+							}
+
+							mui.each(parData, function(index, element) {
+								//console.log('更新与家长关系 ' + JSON.stringify(element));
+								if(element.ustuid == ustuid) {
+									element.urel = urel;
+								}
+							});
 						} else {
 							mui.toast('更新与家长关系 ' + urel + ' 失败: ' + data.RspTxt);
+							document.getElementById("finish").style.color = 'white';
+							change = true;
 						}
-						postNum--;
-						if(postNum == 0) {
-							events.fireToPageNone('/html/mine/qun_data.html', 'refresh');
-							mui.back();
-						}
+						wd.close();
 					});
 				}
 
@@ -807,6 +773,7 @@
 				 * 修改老师资料
 				 */
 				function changeTea() {
+					var wd = events.showWaiting();
 					//23.通过用户资料ID或关联ID更改各类型资料
 					//所需参数
 					var comData = {
@@ -821,20 +788,24 @@
 						ustuid: '', //关联ID,更新与家长关系必填,其他留空
 						urel: '', //关系,更新与家长关系必填,其他留空
 					};
-
-					// 等待的对话框
-					var wd = plus.nativeUI.showWaiting(storageKeyName.WAITING);
+					var stuid = data.stuid;
 					postDataPro_PostReStu(comData, wd, function(data) {
-						wd.close();
 						console.log('90909090success:RspCode:' + data.RspCode + ',RspData:' + JSON.stringify(data.RspData) + ',RspTxt:' + data.RspTxt);
 						if(data.RspCode == 0) {
 							mui.toast('修改老师资料成功');
 							console.log('修改老师资料成功');
-							events.fireToPageNone('/html/mine/qun_data.html', 'refresh');
+							events.fireToPageNone('qun_manage_data_sub.html', 'changeName', {
+								vtp: 'tec', //更新资料类型,stu:学生,tec:老师,gen:家长关系
+								stuid: stuid, //资料ID,更新学生老师必填,关系留0
+								stuname: tea_name.value, //资料名称
+							});
 							mui.back();
 						} else {
 							mui.toast(data.RspTxt);
+							document.getElementById("finish").style.color = 'white';
+							change = true;
 						}
+						wd.close();
 					});
 				}
 			})
