--- a/JiaoBaoYun-hb/html/mine/qun_manage_data_main.html
+++ b/JiaoBaoYun-hb/html/mine/qun_manage_data_main.html
@@ -22,10 +22,12 @@
 		<header class="mui-bar mui-bar-nav">
 			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
 			<h1 id="title" class="mui-title"></h1>
+			<a id="addData" class="mui-icon mui-icon-plus mui-pull-right"></a>
 		</header>
 		<div class="mui-content"></div>
 	</body>
 	<script src="../../js/mui.min.js"></script>
+	<script type="text/javascript" src="../../js/utils/events.js"></script>
 	<script type="text/javascript">
 		//启用双击监听
 		mui.init({
@@ -43,9 +45,7 @@
 		});
 
 		mui.plusReady(function() {
-			var wd = plus.nativeUI.showWaiting('加载中...', {
-				back: 'none'
-			});
+			var wd = events.showWaiting();
 			//---获取数据并传递数据---start---
 			var main = plus.webview.currentWebview(); //获取当前窗体对象
 			var data = main.data; //接收A页面传入参数值
@@ -65,6 +65,15 @@
 				}, 250);
 			});
 			//---获取数据并传递数据---end---
+
+			//创建资料
+			document.getElementById('addData').addEventListener('tap', function() {
+				var passData = {
+					gid: data.gid, //群id
+					gname: data.gname, //群名称
+				}
+				events.openNewWindowWithData('qun_data_create.html', passData);
+			});
 		});
 	</script>
 
