--- a/JiaoBaoYun-hb/html/cloud/keeprecord_callorrecord_main.html
+++ b/JiaoBaoYun-hb/html/cloud/keeprecord_callorrecord_main.html
@@ -10,6 +10,7 @@
 		<link rel="stylesheet" href="../../css/mui.min.css">
 		<link rel="stylesheet" href="../../css/utils/common.css" />
 		<script src="../../js/mui.min.js"></script>
+		<script type="text/javascript" src="../../js/utils/events.js"></script>
 	</head>
 
 	<body>
@@ -38,6 +39,7 @@
 		});
 
 		mui.plusReady(function() {
+			var wd = events.showWaiting();
 			//---获取数据并传递数据---start---
 			var main = plus.webview.currentWebview(); //获取当前窗体对象
 			var data = main.data; //接收A页面传入参数值
@@ -46,14 +48,10 @@
 			document.body.querySelector('.mui-title').innerText = data.stuname;
 
 			//创建子页面
-			var sub = plus.webview.create('keeprecord_callorrecord_sub.html', 'keeprecord_callorrecord_sub.html', {
-				top: (localStorage.getItem('StatusHeightNo') * 1 + 45) + 'px',
-				bottom: '0px'
-			}, {
-				data: data
-			});
-			sub.addEventListener('loaded', function() {
-				main.append(sub);
+			events.createSubAppendMain(main, 'keeprecord_callorrecord_sub.html', data, function() {
+				setTimeout(function() {
+					wd.close();
+				}, 250);
 			});
 			//---获取数据并传递数据---end---
 
