--- a/JiaoBaoYun-hb/html/mine/qun_manage_data_main.html
+++ b/JiaoBaoYun-hb/html/mine/qun_manage_data_main.html
@@ -51,19 +51,14 @@
 			var data = main.data; //接收A页面传入参数值
 			console.log('qun_manage_member_main.html:' + JSON.stringify(data));
 			document.getElementById("title").innerText = data.gname + '人员资料';
+
 			//创建子页面
-			var sub = plus.webview.create('qun_manage_data_sub.html', 'qun_manage_data_sub.html', {
-				top: (localStorage.getItem('StatusHeightNo') * 1 + 45) + 'px',
-				bottom: '0px'
-			}, {
-				data: data
-			});
-			sub.addEventListener('loaded', function() {
-				main.append(sub);
+			events.createSubAppendMain(main, 'qun_manage_data_sub.html', data, function() {
 				setTimeout(function() {
 					wd.close();
 				}, 250);
 			});
+
 			//---获取数据并传递数据---end---
 
 			//创建资料
