--- a/JiaoBaoYun-hb/html/mine/qun_manage_member_main.html
+++ b/JiaoBaoYun-hb/html/mine/qun_manage_member_main.html
@@ -26,7 +26,7 @@
 		<div class="mui-content"></div>
 	</body>
 	<script src="../../js/mui.min.js"></script>
-	<script type="text/javascript" src="../../js/utils/events.js" ></script>
+	<script type="text/javascript" src="../../js/utils/events.js"></script>
 	<script type="text/javascript">
 		//启用双击监听
 		mui.init({
@@ -53,18 +53,12 @@
 			document.getElementById("title").innerText = data.gname + '群成员';
 
 			//创建子页面
-			var sub = plus.webview.create('qun_manage_member_sub.html', 'qun_manage_member_sub.html', {
-				top: (localStorage.getItem('StatusHeightNo') * 1 + 45) + 'px',
-				bottom: '0px'
-			}, {
-				data: data
-			});
-			sub.addEventListener('loaded', function() {
-				main.append(sub);
+			events.createSubAppendMain(main, 'qun_manage_member_sub.html', data, function() {
 				setTimeout(function() {
 					wd.close();
 				}, 250);
 			});
+
 			//---获取数据并传递数据---end---
 		});
 	</script>
