解决5s屏幕头像拉伸问题

--- a/JiaoBaoYun-hb/html/mine/account-info.html
+++ b/JiaoBaoYun-hb/html/mine/account-info.html
@@ -15,8 +15,10 @@
 				max-width: 70%;
 			}
 			.head-portrait{
-				width: 4rem;
-				height: 4rem;
+				min-width: 4rem;
+				min-height: 4rem;
+				max-width: 4rem;
+				max-height: 4rem;
 				border-radius: 50%;
 			}
 		</style>
