更改账号信息界面

--- a/JiaoBaoYun-hb/html/mine/account-info.html
+++ b/JiaoBaoYun-hb/html/mine/account-info.html
@@ -45,7 +45,7 @@
 						<a href="javascript:;">
 							<p class="mui-pull-right" id='uname'>暂无</p>
 							<div class="mui-media-body">
-								用户名
+								账号
 
 							</div>
 						</a>
@@ -63,7 +63,7 @@
 						<a href="javascript:;">
 							<p class="mui-pull-right" id='account'>暂无</p>
 							<div class="mui-media-body">
-								账号
+								手机号码
 
 							</div>
 						</a>
